added some recipes loosely based on earlier versions